<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/panel"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-125dp"
        >

        <!-- Nombre(s) -->


        <TextView
            android:id="@+id/SkyFly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SkyFly"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/purple_600"/>

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:textColorHint="@color/black"/>

        <!-- Apellido(s) -->
        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido"
            android:textColorHint="@color/black"/>

        <TextView
            android:id="@+id/tvSelectOrigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/origen"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <!-- Origen -->
        <Spinner
            android:id="@+id/spnOrigin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvSelectDestin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/destino"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <!-- Destino -->
        <Spinner
            android:id="@+id/spnDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Fecha de salida -->
        <Button
            android:id="@+id/btnDepartureDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_salida" />

        <!-- Fecha de regreso -->
        <Button
            android:id="@+id/btnReturnDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha_regreso" />

        <!-- Correo electrónico -->
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"/>

        <!-- Número de viajero frecuente (opcional) -->
        <EditText
            android:id="@+id/etFrequentFlyerNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/num_viajero_frec"
            android:inputType="number"
            android:maxLength="8"
            android:textColorHint="@color/black"/>

        <Spinner
            android:id="@+id/spnDepartureTimes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"/>

        <Spinner
            android:id="@+id/spnReturnTimes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <!-- Botón Reservar -->
        <Button
            android:id="@+id/btnReserve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reservar" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>